fixed some gap spaces; deleted a line of code that wasn't necessary

--- a/assets/css/navigation.css
+++ b/assets/css/navigation.css
@@ -1,9 +1,9 @@
 /* styled label */
 label {
-  font-family: Impact, 'Arial Narrow Bold', sans-serif, 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-size: 20px;
-
+  
   color: white;
+  
   padding: 1rem;
 }
 
@@ -118,7 +118,6 @@ nav a {
 .social-nav li:hover {
   transform: scale(1.5);
 }
-
 
 /* used different color for nav */
 @media (color) {
